FIX: Add bottom spacing for the new topic map (#722)

--- a/assets/stylesheets/modules/summarization/common/ai-summary.scss
+++ b/assets/stylesheets/modules/summarization/common/ai-summary.scss
@@ -1,3 +1,9 @@
+.topic-map .topic-map__additional-contents {
+  .summarization-buttons {
+    padding-bottom: 0.5em;
+  }
+}
+
 .topic-map .toggle-summary {
   .summarization-buttons {
     display: flex;
